# universal-lsp

./: .gitignore  ARCHITECTURE.md  BUILD_STATUS.md  CLAUDE.md  Cargo.toml  DEPENDENCY_CONFLICT_ANALYSIS.md  DUAL_PROTOCOL_ARCHITECTURE.md  FEATURES_SUMMARY.md  INTEGRATION_TEST_ANALYSIS.md  LANGUAGE_EXPANSION_STATUS.md  LANGUAGE_SUPPORT_MATRIX.md  LICENSE  README.md  README_SETUP.md  SETUP_GUIDE.md  TEST_PLAN.md  TEST_RESULTS.md  TEST_STATUS.md  demo.js  demo.py  dev-env-setup.sh  setup.sh  test_hover_direct.rs
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
benches/: performance.rs
docs/: ACP-IMPLEMENTATION-PLAN.md  ACP-QUICK-START.md  ACP-SPRINT-1-PLAN.md  ARCHITECTURE.md  DEVELOPMENT.md  GETTING_STARTED.md  LANGUAGES.md  TESTING.md  diagnostics-implementation-summary.md  diagnostics-test-verification.md  phase1-completion-summary.md  session-accomplishments.md  universal-lsp-ai-ready.md  world-class-lsp-roadmap.md
docs/theme/: header.html  universal-lsp-complete.css  universal-lsp.css
examples/: 01-vscode-universallsp-claude.md  02-zed-universallsp-claude.md  03-terminal-universallsp-claude.md  04-sveltekit-tailwind-universallsp-claude.md  acp_agent_mcp.rs  ai_completions.rs  basic_lsp_server.rs
scripts/: find_grammars.sh
src/: lib.rs  main.rs
src/acp/: context.rs  mod.rs  persistence.rs  tools.rs
src/ai/: claude.rs  copilot.rs  mod.rs
src/code_actions/: mod.rs
src/code_lens/: mod.rs
src/config/: mod.rs
src/coordinator/: cache.rs  client.rs  mod.rs  pool.rs  protocol.rs
src/diagnostics/: mod.rs
src/formatting/: mod.rs
src/inlay_hints/: mod.rs
src/inline_completion/: mod.rs
src/language/: mod.rs
src/mcp/: error.rs  mod.rs  protocol.rs  transport.rs
src/mcp/transport/: stdio.rs  websocket.rs
src/pipeline/: mod.rs
src/proxy/: mod.rs
src/semantic_tokens/: mod.rs
src/signature_help/: mod.rs
src/text_sync/: mod.rs
src/tree_sitter/: mod.rs
src/workspace/: mod.rs
src/workspace_index/: mod.rs
svelte-demo/: index.html  package-lock.json  package.json
test_data/: large.js  medium.js
tests/: README.md  acp_agent_integration_test.rs  acp_claude_integration_test.rs  acp_context_integration_test.rs  acp_streaming_integration_test.rs  acp_tools_integration_test.rs  ai_providers_comprehensive_test.rs  ai_providers_integration_test.rs  code_actions_integration_test.rs  code_lens_integration_test.rs  coordinator_test.rs  diagnostics_integration_test.rs  formatting_integration_test.rs  hover_test.rs  inlay_hints_integration_test.rs  integration_svelte_test.rs  integration_terminal_test.rs  integration_test.rs  integration_vscode_test.rs  integration_zed_test.rs  lsp_features_comprehensive_test.rs  mcp_comprehensive_test.rs  mcp_integration_comprehensive_test.rs  mcp_integration_phase4_test.rs  mock_mcp_server.rs  proxy_comprehensive_test.rs  semantic_tokens_integration_test.rs  signature_help_integration_test.rs  tree_sitter_comprehensive_test.rs
tests/visual/: package.json  test_documentation_theme.js  test_emoji_removal.js  validate_docs_theme.js
