[package]
name = "universal-lsp"
version = "0.1.0"
edition = "2021"
authors = ["Valknar"]
description = "Universal Language Server Protocol implementation supporting 242+ languages with AI-powered features"
license = "MIT"
repository = "https://github.com/valknarthing/universal-lsp"
readme = "README.md"

[[bin]]
name = "universal-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5.5"
once_cell = "1.19"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
url = "2.5"
tree-sitter = "0.21"  # Upgraded from 0.20 to support SQL and YAML (user requirement)

# Strategy: Use crates.io versions where available for 0.21,
# fall back to git repos for parsers that need updates

# Core Web & JavaScript ecosystem - using crates.io 0.21 versions
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-svelte = "0.10"

# Web core languages - DISABLED: v0.20.x versions use tree-sitter 0.20.10, incompatible with 0.21
# tree-sitter-html = { git = "https://github.com/tree-sitter/tree-sitter-html", tag = "v0.20.0" }
# tree-sitter-css = { git = "https://github.com/tree-sitter/tree-sitter-css", tag = "v0.20.0" }
# tree-sitter-json = { git = "https://github.com/tree-sitter/tree-sitter-json", tag = "v0.20.2" }

# System languages - using crates.io 0.21 versions
tree-sitter-c = "0.21"
tree-sitter-cpp = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-go = "0.21"

# Scripting languages
tree-sitter-python = "0.21"
tree-sitter-ruby = "0.21"
tree-sitter-php = "0.23"

# JVM languages
tree-sitter-java = "0.21"
# Scala and C# temporarily disabled due to version availability

# Shell
tree-sitter-bash = "0.21"

# Data formats
# tree-sitter-markdown = "0.7"  # Disabled: uses tree-sitter 0.19.5, incompatible with 0.21
tree-sitter-yaml = "0.6"        # Compatible with tree-sitter 0.21

# Database
tree-sitter-sequel = "0.3"      # DerekStride/tree-sitter-sql, compatible with tree-sitter 0.21
# Configuration parsing
toml = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tower = "0.4"
tempfile = "3.8"
warp = "0.3"  # For mock HTTP servers in tests
hyper = "0.14"  # For HTTP testing
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
default = []
ai = []
