[package]
name = "universal-lsp"
version = "0.1.0"
edition = "2021"
authors = ["Valknar"]
description = "Universal Language Server Protocol implementation supporting 242+ languages with AI-powered features"
license = "MIT"
repository = "https://github.com/valknarthing/universal-lsp"
readme = "README.md"

[lib]
name = "universal_lsp"
path = "src/lib.rs"

[[bin]]
name = "universal-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5.5"
once_cell = "1.19"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
url = "2.5"
futures = "0.3"  # For streaming support
tree-sitter = "0.20"  # Using 0.20.10 for HTML/CSS/JSON/Svelte compatibility

# Strategy: Use tree-sitter 0.20.10-compatible versions for maximum language support

# Core Web & JavaScript ecosystem
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-svelte = "0.10"

# Web core languages
tree-sitter-html = { git = "https://github.com/tree-sitter/tree-sitter-html", tag = "v0.20.0" }
tree-sitter-css = { git = "https://github.com/tree-sitter/tree-sitter-css", tag = "v0.20.0" }
tree-sitter-json = { git = "https://github.com/tree-sitter/tree-sitter-json", tag = "v0.20.2" }

# System languages
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-go = "0.20"

# Scripting languages
tree-sitter-python = "0.20"
tree-sitter-ruby = "0.20"
tree-sitter-php = "0.20"
tree-sitter-bash = { git = "https://github.com/tree-sitter/tree-sitter-bash", tag = "v0.20.5" }

# JVM languages
tree-sitter-java = "0.20"
tree-sitter-scala = { git = "https://github.com/tree-sitter/tree-sitter-scala", tag = "v0.20.2" }
tree-sitter-kotlin = { git = "https://github.com/fwcd/tree-sitter-kotlin", tag = "0.3.1" }

# .NET languages
tree-sitter-c-sharp = { git = "https://github.com/tree-sitter/tree-sitter-c-sharp", tag = "v0.20.0" }

# Functional programming
# Scientific computing
# DevOps & Infrastructure
# Configuration parsing
toml = "0.8"
async-trait = "0.1.89"
thiserror = "2.0.17"
agent-client-protocol = "0.7.0"
dirs = "5.0"  # For home directory detection in session persistence

[dev-dependencies]
tokio-test = "0.4"
tower = "0.4"
tempfile = "3.8"
warp = "0.3"  # For mock HTTP servers in tests
hyper = "0.14"  # For HTTP testing
criterion = { version = "0.5", features = ["html_reports"] }
futures = "0.3"  # For join_all in async tests

[[bin]]
name = "mock-mcp-server"
path = "tests/mock_mcp_server.rs"

[[bench]]
name = "performance"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
default = []
ai = []
